fixes horizontal overflow in sidebar

--- a/app/global.css
+++ b/app/global.css
@@ -10,3 +10,7 @@ body,
 body:not(.setup) {
   display: none;
 }
+
+calcite-block {
+  overflow: clip;
+}
